Updated test code to use Java 17 features